[gd_scene load_steps=5 format=3 uid="uid://chyocx8cbbyia"]

[ext_resource type="Script" path="res://startup.gd" id="1_p6g4y"]
[ext_resource type="Texture2D" uid="uid://67ryh1oxx7t2" path="res://assets/talking/intro_talk_01.png" id="2_28ftp"]
[ext_resource type="Texture2D" uid="uid://b6y7ylqdn1i2c" path="res://assets/talking/intro_talk_02.png" id="3_h2mar"]
[ext_resource type="Texture2D" uid="uid://bkgmxmdrr3jyi" path="res://assets/talking/intro_talk_03.png" id="4_7gisp"]

[node name="Startup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6g4y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Talk2" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 155.0
offset_top = 405.0
offset_right = 1003.0
offset_bottom = 643.0
texture = ExtResource("3_h2mar")
stretch_mode = 4

[node name="Talk1" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 155.0
offset_top = 405.0
offset_right = 1003.0
offset_bottom = 643.0
texture = ExtResource("2_28ftp")
stretch_mode = 4

[node name="Talk3" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 155.0
offset_top = 405.0
offset_right = 1003.0
offset_bottom = 643.0
texture = ExtResource("4_7gisp")
stretch_mode = 4
